2002-08-22  Kristian Rietveld  <kris@gtk.org>
 
	* src/yelp-man.c:
	(yelp_man_free_initial_tree): also free the node itself
	(yelp_man_cleaup_initial_tree): free the initial tree structure of
	  the nodes we're freeing here. 

2002-08-21  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-html-gtkhtml2.c (html_url_requested_cb): 
	- Don't use the full base-uri for resolving relative
	links. Instead use the path part of the base-uri. Fixes #91199

2002-08-20  Ross Burton  <ross@burtonini.com>
 
	* yelp.desktop.in: 
	- Fix the desktop file so that it validates correctly.

2002-08-20  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c (toc_page_end): removed a new line before
	  the gnome2 logo.

2002-08-19  Sander Vesik <sander.vesik@sun.com>

	* stylesheets/yelp-customization.xsl:
	- make more table borders show up in the user guide

2002-08-16  Padraig O'Briain  <padraig.obriain@sun.com>

	* src/yelp-html-gtkhtml1.c
	* src/yelp-html-gtkhtml2.c
	* src/yelp-view-content.c
	* src/yelp-view-index.c
	* stylesheets/docbook/html/docdbook.xsl
	Remove reference to bgcolor being set to white (bug #89838)

2002-08-13  Mikael Hallendal  <micke@codefactory.se>

	* Release 1.0.3

	* configure.in: Bumped to 1.0.3

	* NEWS: Updated for 1.0.3
	
2002-08-13  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-man.c:
	(yelp_man_remove_duplicates_from_manpath): 
	- return a GSList instead
	- Hopefully fixed #90385
	(yelp_man_init): using a GSList for manpathes instead of gchar **.

2002-08-05  Sander Vesik <sander.vesik@sun.com>

	* stylesheets/yelp-customization.xsl:
        - apply bold formating to guibuttons
        - apply mono formating to commands
        - fix left-margin instead of margin-left
        - relief from table formating quirks
        - leave space after inline media objects
        - make <b> create a consistent result
        - make bulleted and numbered list items align consistently

	* src/yelp-db2html.c: